<resources>
    <string name="app_name">My Fitness Buddy</string>
    <string name="firstFragmentText">Phone Number</string>
    <string name="secondFragmentText">Name</string>
    <string name="thirdFragmentText">Birth Date</string>
    <string name="fourthFragmentText">Gender</string>
    <string name="fifthFragmentText">User Type</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_interior">InteriorActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sports_performance">Sports performance</string>
    <string name="functional_trainer">Functional trainer</string>
    <string name="weight_management">Weight management</string>
    <string name="recovery_trainer">Recovery trainer</string>
    <string name="senior_trainer">Senior trainer</string>
    <string name="youth_trainer">Youth trainer</string>
    <string name="performance_trainer">Performance trainer</string>
    <string name="zumba">Zumba</string>
    <string name="flexibility_specialist">Flexibility specialist</string>
    <string name="fiziotherapist">Physiotherapist</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="aerobics">Aerobics</string>
    <string name="yoga">Yoga</string>
    <string name="pilates">Pilates</string>
    <string name="kettlebells">Kettlebells</string>
    <string name="cardio">Cardio</string>
    <string name="body_builder">Body building</string>
    <string name="select_specialties_text_view">Select your specialties</string>
    <string name="gym_location_text_view">Where do you train?</string>
    <string name="trainer_price_text_view">How much does your class cost?</string>
    <string name="hour_text_view">hour(s)</string>
    <string name="lei_text_view">lei</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="group_instructor">Group Instructor</string>
    <string name="type_trainer_text_view">What kind of trainer are you?</string>
    <string name="trainer_introduction_text_view">Please introduce yourself!</string>
    <string name="choose_image">Choose Image</string>
    <string name="save_data">Save Data</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="build_muscle">Build Muscle</string>
    <string name="improve_endurance">Improve Endurance</string>
    <string name="improve_athletic_skills">Improve Athletic Skills</string>
    <string name="improve_flexibility">Improve Flexibility</string>
    <string name="body_composition">Body Composition</string>
    <string name="improve_agility">Improve Agility</string>
    <string name="improve_stamina">Improve Stamina</string>
    <string name="freedom_from_pain">Freedom from Pain</string>
    <string name="fiziotherapy">Physiotherapy</string>
    <string name="select_your_main_goal">Select your main goal</string>
    <string name="location_text_view">Where would you like to train?</string>
    <string name="trainer_type_text_view">Would you like to have a personal trainer or a group instructor?</string>
    <string name="nutritionist_text_view">Would you like your trainer to be a Nutritionist?</string>
    <string name="which_criteria_text_view">Which criteria is the most important to you?</string>
    <string name="enter_phone_number_TV">Please enter your phone number!</string>
    <string name="phone_number">Phone number</string>
    <string name="usertype_tv">Would you like to join as a trainer or trainee?</string>
    <string name="trainee">Trainee</string>
    <string name="trainer">Trainer</string>
    <string name="create_account_btn">Create Account</string>
    <string name="enter_name_TV">Please enter your name!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="please_select_your_gender">Please select your gender!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_birth_date_TV">Please select your date of birth!</string>
    <string name="hint_enter_message">Enter message</string>
    <string name="find_new_buddies">Find New Buddies</string>



</resources>
