<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/userTypeFieldDescription"
            android:layout_width="349dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/usertype_tv"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupUserType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prevButtonUserType" />

        <RadioGroup
            android:id="@+id/radioGroupUserType"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userTypeFieldDescription">

            <RadioButton
                android:id="@+id/traineeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="2"
                android:checked="true"
                android:text="@string/trainee" />

            <RadioButton
                android:id="@+id/trainerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trainer" />
        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="168dp"
            android:layout_height="78dp"
            android:alpha="0.7"
            android:background="@drawable/rounded_button"
            android:text="@string/create_account_btn"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupUserType" />

        <ImageView
            android:id="@+id/prevButtonUserType"
            android:layout_width="63dp"
            android:layout_height="48dp"
            android:alpha="0.8"
            app:layout_constraintBottom_toTopOf="@+id/userTypeFieldDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/prevbutton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>