<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nameFieldDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/please_select_your_gender"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prevButtonGender" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/nextButtonGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameFieldDescription">

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:checked="true"
                android:layout_weight="2"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <ImageView
            android:id="@+id/nextButtonGender"
            android:layout_width="143dp"
            android:layout_height="112dp"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
            app:srcCompat="@drawable/nextbtn" />

        <ImageView
            android:id="@+id/prevButtonGender"
            android:layout_width="63dp"
            android:layout_height="48dp"
            android:alpha="0.8"
            app:layout_constraintBottom_toTopOf="@+id/nameFieldDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/prevbutton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>