<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textSpecialty"
            android:layout_width="234dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/trainer_introduction_text_view"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextIntroductionTrainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextIntroductionTrainer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSpecialty" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="204dp"
            android:layout_height="68dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/trainerUploadImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextIntroductionTrainer">

            <Button
                android:id="@+id/chooseImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="311dp" />

            <ProgressBar
                android:id="@+id/trainerImageProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/trainerUploadImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/trainerSaveDataButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <Button
            android:id="@+id/trainerSaveDataButton"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:text="@string/save_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainerUploadImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>